--- a/gradle.properties
+++ b/gradle.properties
@@ -47,3 +47,13 @@ mod_group_id=xyz.anonym
 mod_authors=TheAnonym3000
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=
+
+## Create
+create_version = 6.0.8-289
+ponder_version = 1.0.91
+flywheel_version = 1.0.5
+registrate_version = MC1.20-1.3.3
+
+## Geckolib Mod
+geckolib_version=4.7.1.1
+geckolib_version_range=[4.7,)
